crates/carta/tests/snapshots/golden_writer__html4__common__bullet-nested.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<ul>
<li><p>outer</p>
<ul>
<li>inner one</li>
<li>inner two</li>
</ul></li>
</ul>
