crates/carta/tests/snapshots/golden_writer__html4__common__citation.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p>see <span class="citation">[@knuth1984]</span> for details</p>
