crates/carta/tests/snapshots/golden_writer__html4__common__code-block-indented.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<pre><code>indented code
second line</code></pre>
