crates/carta/tests/snapshots/golden_writer__html4__common__code-span-space-padded.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p><code> x </code></p>
<p><code> </code></p>
<p><code>`x</code></p>
