crates/carta/tests/snapshots/golden_writer__html4__common__definition-list-loose.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<dl>
<dt>Term</dt>
<dd>
<p>Definition one</p>
</dd>
<dd>
<p>Definition two</p>
</dd>
</dl>
