crates/carta/tests/snapshots/golden_writer__html4__common__definition-list-tight.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<dl>
<dt>Term</dt>
<dd>
Definition one
</dd>
<dd>
Definition two
</dd>
</dl>
