crates/carta/tests/snapshots/golden_writer__html4__common__div.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<div id="d" class="note">
<p>body paragraph</p>
</div>
