crates/carta/tests/snapshots/golden_writer__html4__common__emphasis-family.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p><em>emph</em> <strong>strong</strong> <del>struck</del>
super<sup>2</sup> sub<sub>3</sub></p>
