crates/carta/tests/snapshots/golden_writer__html4__common__footnote-codeblock-end.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p>ref<a href="#fn1" class="footnote-ref"
id="fnref1"><sup>1</sup></a></p>
<div class="footnotes footnotes-end-of-document">
<hr />
<ol>
<li id="fn1"><pre><code>code only</code></pre>
<a href="#fnref1" class="footnote-back">↩︎</a></li>
</ol>
</div>
